# word_clout

./: .dockerignore  .gitignore  .kedro.yml  Dockerfile  LICENSE  README-DEV.md  README.md  docker-compose.yml  install_venv.sh  junit-pytest.xml  pyproject.toml  run_tests.sh  setup.cfg  setup.py
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
src/: README.md  calculators.py  definitions.py  hooks.py  parsers.py  requirements.in  requirements.txt  validation.py
src/pipelines/data_engineering/: nodes.py  pipeline.py
src/pipelines/data_science/: __init__.py  append_tfidf.py  nodes.py  parse_description.py  pipeline.py
testing_framework/: .coveragerc  Dockerfile  pytest.ini
tests/: parsers.py  test_calculators.py  test_parsers.py  test_run.py
tests/pipelines/data_engineering/: test_nodes.py
tests/pipelines/data_science/: test_append_tfidf.py  test_nodes.py  test_parse_description.py
word_clout/: .kedro.yml
word_clout/docs/source/: conf.py
word_clout/src/: setup.py
word_clout/src/tests/: test_run.py
word_clout/src/word_clout/: __init__.py  hooks.py
