[tool.poetry]
name = "poetry run"
version = "0.1.0"
description = "Pipeline to get wordcloud from job postings"
authors = ["Frank Cao <franktcao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.4"
scikit-learn = "^0.23.2"
pyspark = "^3.0.1"
pyspark-stubs = "^3.0.0"
numpy = "^1.19.3"
scipy = "^1.5.3"
seaborn = "^0.11.0"
pyplot-themes = "^0.2.2"
matplotlib = "^3.3.2"
spacy = "^2.3.2"
bs4 = "^0.0.1"
BeautifulSoup = "^3.2.2"
kedro = "^0.16.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
